envoy-config/foo-gw-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: foo-com-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.foo.com"
    port:
      number: 80
      name: http
      protocol: HTTP
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.foo.com"
    tls:
      mode: SIMPLE
      serverCertificate: /etc/certs/server.pem
      privateKey: /etc/certs/privatekey.pem
